--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <video autoplay loop src="logo.mp4"></video>
-    <script src='lottie.js'></script>
+    <div id="anim"></div>
+    <script src='logo.js'></script>
     <script src="script.js"></script>
 </body>
 
